<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardContainer"
        android:orientation="vertical"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:elevation="12dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/fruitCardImage"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/fruit_card_image"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:padding="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/cardLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#F65454"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/mansanas"/>

                <TextView
                    android:textSize="12sp"
                    android:text="@string/tap_for_more_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/confidence"
                        android:textSize="11sp"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"/>

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/cardConfidence"
                            android:text="@string/_97"
                            android:fontFamily="@font/montserrat_semibold"
                            android:layout_width="75dp"
                            android:textColor="#F65454"
                            android:layout_gravity="bottom"
                            android:layout_height="wrap_content"/>

                        <ProgressBar
                            android:id="@+id/cardPercentage"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:progress="50"
                            android:progressTint="#F65454" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

<!--            <TextView-->
<!--                android:id="@+id/cardConfidence"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/_97"-->
<!--                android:textSize="20sp"-->
<!--                android:textStyle="bold"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.341"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintVertical_bias="0.989" />-->

<!--            <ProgressBar-->
<!--                android:id="@+id/cardPercentage"-->
<!--                style="?android:attr/progressBarStyleHorizontal"-->
<!--                android:layout_width="212dp"-->
<!--                android:layout_height="16dp"-->
<!--                android:backgroundTint="#F65454"-->
<!--                android:max="100"-->
<!--                android:progress="50"-->
<!--                android:progressTint="#F65454"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="1.0"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintVertical_bias="0.944" />-->

<!--            <TextView-->
<!--                android:id="@+id/cardLabel"-->
<!--                android:layout_width="255dp"-->
<!--                android:layout_height="26dp"-->
<!--                android:text="@string/mansanas"-->
<!--                android:textSize="20sp"-->
<!--                android:textStyle="bold"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="1.0"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintVertical_bias="0.02" />-->

<!--            <TextView-->
<!--                android:id="@+id/cardSubtitle"-->
<!--                android:layout_width="256dp"-->
<!--                android:layout_height="23dp"-->
<!--                android:text="@string/tap_for_more_information"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="1.0"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--            <ImageView-->
<!--                android:id="@+id/imageView"-->
<!--                android:layout_width="127dp"-->
<!--                android:layout_height="137dp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.0"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                tools:srcCompat="@tools:sample/avatars" />-->

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>